commit work done

--- a/MarketAppTests/MarketAppTests.csproj
+++ b/MarketAppTests/MarketAppTests.csproj
@@ -78,6 +78,8 @@
       <DependentUpon>NewTicketCreation.feature</DependentUpon>
     </Compile>
     <Compile Include="Libraries\Screens\LoginScreen.cs" />
+    <Compile Include="Libraries\Screens\NewTicketScreen.cs" />
+    <Compile Include="Libraries\Screens\SideBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
