commit work done

--- a/MarketAppTests/MarketAppTests.csproj
+++ b/MarketAppTests/MarketAppTests.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="Libraries\Screens\LoginScreen.cs" />
     <Compile Include="Libraries\Screens\NewTicketCreationScreen.cs" />
+    <Compile Include="Libraries\Screens\ProductSelectionScreen.cs" />
     <Compile Include="Libraries\Screens\SideBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
