--- a/MarketAppTests/packages.config
+++ b/MarketAppTests/packages.config
@@ -2,15 +2,9 @@
 <packages>
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net452" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net452" />
+  <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
-  <package id="NUnit" version="3.6.1" targetFramework="net452" />
-  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net452" />
-  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net452" />
-  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net452" />
-  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net452" />
-  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net452" />
-  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net452" />
-  <package id="NUnit.Runners" version="3.6.1" targetFramework="net452" />
   <package id="Selenium.Support" version="3.4.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
