--- a/MarketAppTests/packages.config
+++ b/MarketAppTests/packages.config
@@ -4,10 +4,11 @@
   <package id="Castle.Core" version="4.1.0" targetFramework="net452" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Selenium.Support" version="3.4.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net452" />
-  <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
-  <package id="SpecRun.Runner" version="1.5.2" targetFramework="net452" />
-  <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net452" />
+  <package id="SpecFlow" version="2.2.0" targetFramework="net452" />
+  <package id="SpecRun.Runner" version="1.6.0" targetFramework="net452" />
+  <package id="SpecRun.SpecFlow" version="1.6.0" targetFramework="net452" />
+  <package id="SpecRun.SpecFlow.2-2-0" version="1.6.0" targetFramework="net452" />
 </packages>
